<resources>
    <string name="app_name">CCL-OPR</string>
    <string name="title_scan">Escanear</string>
    <string name="title_scanned">Escaneados</string>
    <string name="title_resume">Resumen</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_national">Planificaciones Nacionales</string>
    <string name="action_sign_in_urban">Planificaciones Urbanas</string>
    <string name="title_activity_planifications">Planificaciones</string>
    <string name="no_planifications">No hay planificaciones para este dia</string>
    <string name="unknown_error">Ocurrio un error desconocido. Intente de nuevo</string>
    <string name="parse_planifications_error">Ocurrio un error al parsear la informacion. Intente de nuevo</string>
    <string name="network_error">Ocurrio un error de red. Intente de nuevo</string>
    <string name="network_error_title">Error de red</string>
    <string name="fetching_driver_error">Error cargando informacion de conductor. Intente de nuevo</string>
    <string name="fetching_profile_error">Error cargando perfil de usuario. Intente de nuevo</string>
    <string name="retry">Reintentar</string>
    <string name="database_error">Error Base de Datos</string>
    <string name="database_error_saving_planifications">Error al guardar planificaciones en la base de datos local</string>
    <string name="error_fetching_planifications">Error al descargar planificaciones del usuario. Intente de nuevo</string>
    <string name="start_route">Iniciar Ruta</string>
    <string name="title_pending">Pendientes</string>
    <string name="logout">Cerrar sesion</string>
    <string name="certified">Certificadas</string>
    <string name="delivery_lines">Lineas de Guias</string>
    <string name="deliveries">Guias</string>
    <string name="date">2020–11–05</string>
    <string name="parsing_error_title">Error de parseo</string>
    <string name="parsing_error">Error parseando datos</string>
    <string name="title_activity_dashbooard">Dashboard</string>
    <string name="finished">Finalizado</string>
    <string name="title_activity_delivery">Guias</string>
    <string name="title_activity_delivery_detail">Inicio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="set_as_cancelled">Cancelar</string>
    <string name="set_as_delivered">Entregar</string>
    <string name="set_as_undelivered">No Entregar</string>
    <string name="end_route">Finalizar Ruta</string>
    <string name="cancel_planification">Cancelar</string>
    <string name="cancel_delivery">Cancelar Delivery</string>
    <string name="cancel_delivery_prompt">Esta seguro de querer cancelar este delivery? Esta accion no puede ser deshecha</string>
    <string name="deliver_delivery">Entregar Delivery</string>
    <string name="deliver_delivery_prompt">Esta seguro de querer entregar este delivery? Esta accion no puede ser deshecha</string>
    <string name="undeliver_delivery">No Entregar Delivery</string>
    <string name="undeliver_delivery_prompt">Esta seguro de querer no entregar este delivery?</string>
    <string name="cancel_planification_prompt">Esta seguro de cancelar esta planificacion?</string>
    <string name="start_route_prompt">Esta seguro de dar inicio a esta ruta?</string>
    <string name="complete_route">Completar Ruta</string>
    <string name="complete_route_prompt">Esta seguro de completar esta ruta?</string>
    <string name="certificate">Certificar</string>
    <string name="what_to_do">Que desea hacer?</string>
    <string name="route_started">Ruta Iniciada</string>
    <string name="route_completed">Ruta Completada</string>
    <string name="route_cancelled">Ruta Cancelada</string>
    <string name="items">Items</string>
    <string name="form">Formulario</string>
    <string name="delivery_details">Detalles</string>
    <string name="empty_form_message">Seleccione una accion del menu superior para cargar su formulario</string>
    <string name="input_text_hint">Ingrese su texto…</string>
    <string name="database_error_saving_state_form_definitions">Error al guardar definicion de formulario en la BD</string>
    <string name="no_state_form_found">No se encontro un formulario para el estado seleccionado</string>
    <string name="title_activity_create_signature">Ingrese Firma</string>
    <string name="clear">Limpiar</string>
    <string name="done">Hecho</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="title_activity_maps">Ubicacion</string>
    <string name="item_found">Item encontrado</string>
    <string name="item_not_found">Item no encontrado</string>
    <string name="total_weight">Total Peso</string>
    <string name="total_value">Valor Total</string>
    <string name="detail">Detalles</string>
    <string name="completed">Completado</string>
    <string name="no_label_planification">Planificacion Sin Label</string>
    <string name="not_certified">No Certificados</string>
    <string name="planned">Planned</string>
    <string name="_2021_01_18">2021–01–18</string>
    <string name="gerardo_garcia">Gerardo Garcia</string>
    <string name="_0_completado">0% Completado</string>
    <string name="manage">GESTIONAR</string>
    <string name="title_activity_manage_delivery">Procesar Envio</string>
    <string name="choose_state">Elija una accion</string>
    <string name="required_field">Este campo es requerido</string>
    <string name="required_field_arg">Este campo %1$s es requerido</string>
    <string name="max_value_exceed">Valor maximo es %1$d</string>
    <string name="max_length_exceed">Tamaño maximo es %1$d</string>
    <string name="min_value_exceed">Valor minimo es %1$d</string>
    <string name="min_length_exceed">Tamaño minimo es %1$d</string>
    <string name="error">Error</string>
    <string name="no_receiver_name">Sin Nombre</string>
    <string name="bogota">Bogota</string>
    <string name="rafael_cardona">Rafael Cardona</string>
    <string name="_12345">#12345</string>
    <string name="certified_items">Items Certificados</string>
    <string name="how_go">Como llegar?</string>
    <string name="sender_info">Envia:</string>
    <string name="example_address">Calle # 47, Ca 8, Via El Palenque</string>
    <string name="no_map_app_installed">Su dispositivo no tiene la aplicacion Google Maps instalada</string>
    <!-- Strings used for fragments for navigation -->

    <string name="important">Important</string>
    <string name="manage_delivery_prompt">Esta seguro de gestionar este envio?</string>
    <string name="no_state_received">No se recibio un estado valido</string>
    <string name="no_delivery_received">No se recibio ningun envio valido</string>
    <string name="no_planification_received">No se recibio ninguna planificacion valida</string>
    <string name="no_data_received">No se recibieron datos</string>
    <string name="view">Ver</string>
    <string name="error_creating_file">Error creando archivo</string>
    <string name="no_action_provided">No hay una accion configurada</string>
    <string name="warning">Advertencia</string>
    <string name="user_denied_permission_msg">Al denegar permisos indispensables la aplicacion no podra realizar ciertas tareas. Por favor considera conceder estos permisos manualmente en la configuracion de la aplicacion</string>
    <string name="invalid_form">Formulario invalido</string>
    <string name="your_position">Tu posicion</string>
    <string name="invalid_selected_position">Ubicacion invalida</string>
    <string name="invalid_file_for">Archivo invalido para el campo $1%s</string>
    <string name="saving_form">Guardando formulario</string>
    <string name="invalid_receiver_coords">Coordenadas de destinatario invalidas</string>
    <string name="search">Buscar</string>
    <string name="clear_filter">Limpiar Filtro</string>
    <string name="should_show_rationale_location_permission_message">Al denegar el permiso de acceder a su ubicacion no se podra registrar su ubicacion en esta aplicacion. Por favor habilite este permiso en la configuracion de esta aplicaicon</string>
    <string name="should_show_rationale_camera_permission_message">Al denegar el permiso de usar la camara no podra tomar fotografias para esta aplicacion. Por favor habilite este permiso en la configuracion de esta aplicaicon</string>
    <string name="delivered_items_saved">Delivered items saved</string>
    <string name="delivered">Delivered</string>
    <string name="database_error_saving_delivery_lines">Error al guardar lineas del delivery</string>
    <string name="selected_document_error">Error con el documento seleccionado</string>
    <string name="title_activity_root">RootActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="payment">Pago</string>
    <string name="total_load_value">Total valor de la carga</string>
    <string name="total_value_delivered">Total valor entregado</string>
    <string name="total_difference">Total diferencia</string>
    <string name="total_devolutions_label">Total valor devuelto</string>
    <string name="preview_dialog_msg">Por favor, verifica que las cantidades y montos esten correctos antes de finalizar esta ruta</string>
    <string name="undelivered_total">Total no entregado</string>
    <string name="carrier_customer_select_msg">Por favor, selecciona un cliente y una direccion para comenzar</string>
    <string name="enter">Entrar</string>
    <string name="fetching_carriers_error">Error fetching carrier partners</string>
    <string name="fetching_customers_error">Error fetching customers</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="dispatch">Despachar</string>
    <string name="cancel">Cancelar</string>
    <string name="select_an_action">Seleccione una accion</string>
    <string name="dispatch_route">Despachar Ruta</string>
    <string name="dispatch_route_prompt">Esta seguro de despachar esta ruta?</string>
    <string name="redispatch_guides">Redespachar guias</string>
    <string name="transfer_guides">Transferir guias</string>
    <string name="initialize">Inicializar</string>
    <string name="redispatched_guides">Redespachadas</string>
    <string name="unredispatched_guides">No Redespachadas</string>
    <string name="dispatching_">Despachando…</string>
    <string name="transfered_deliveries">Guias Transferidas</string>
    <string name="from">Desde</string>
    <string name="to">Hacia</string>
    <string name="source_planification">Origen</string>
    <string name="target_planification">Destino</string>
    <string name="last_transfered_deliveries">Ultimas 5 Guias Transferidas de %1$d</string>
    <string name="planification">Planificacion</string>
    <string name="untransfered_guides">Guias No Transferidas</string>
    <string name="api_url">https://api.dev.ccl-express.com/</string>
</resources>